Corrección en la ruta a las 3 imágenes

--- a/U02P01/index.html
+++ b/U02P01/index.html
@@ -27,9 +27,9 @@
         </ol>
     <hr>
     <h2>Algunas imágenes sobre temas de interés</h2>
-    <img src="C:\SurceCode\UTN\LabComII\utn-labcomII-practices\U02P01\img\CódigoPython.jpeg" alt="código python" title="Código de Python"/>
-    <img src="C:\SurceCode\UTN\LabComII\utn-labcomII-practices\U02P01\img\NarutoShippuden.jpeg" alt="naruto shippuden" height="183" title="Portada de Naruto Shippuden"/>
-    <img src="C:\SurceCode\UTN\LabComII\utn-labcomII-practices\U02P01\img\RetroGames.jpeg" alt="retro games" height="183" title="Juegos Retro"/>
+    <img src="img\CódigoPython.jpeg" alt="código python" title="Código de Python"/>
+    <img src="img\NarutoShippuden.jpeg" alt="naruto shippuden" height="183" title="Portada de Naruto Shippuden"/>
+    <img src="img\RetroGames.jpeg" alt="retro games" height="183" title="Juegos Retro"/>
 </body>
 
 </html>
